added proto name for ICMP6

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@ const PROTO_NAMES = new Map([
 	[ "47",		"GRE"],
 	[ "50",		"ESP"],
 	[ "51",		"AH"],
+	[ "58",		"ICMP6"],
 	[ "88",		"EIGRP"],
 	[ "89",		"OSPF"],
 	[ "103",	"PIM"],
