added router ip flow field

--- a/index.html
+++ b/index.html
@@ -238,22 +238,23 @@ const PROTO_NAMES = new Map([
 ]);
 
 const FLOW_FIELDS = new Map([
-	[ "received", 	{ "desc": "Flow Received", 	'checked': true , 'fil': undefined,	'sort': sortNumber}],
-	[ "duration", 	{ "desc": "Flow Duration",	'checked': false, 'fil': undefined,	'sort': sortNumber}],
-	[ "proto", 		{ "desc": "Protocol", 		'checked': true , 'fil': 'proto',	'sort': sortNumber}],
-	[ "srcAddr", 	{ "desc": "Source Address", 	'checked': true , 'fil': 'src ip',	'sort': sortIP}],
-	[ "srcPort", 	{ "desc": "Source Port", 	'checked': true , 'fil': 'src port',	'sort': sortNumber}],
-	[ "dstAddr", 	{ "desc": "Dest Address", 	'checked': true , 'fil': 'dst ip',	'sort': sortIP}],
+	[ "received", 	{ "desc": "Flow Received",	'checked': true , 'fil': undefined,		'sort': sortNumber}],
+	[ "duration", 	{ "desc": "Flow Duration",	'checked': false, 'fil': undefined,		'sort': sortNumber}],
+	[ "proto", 		{ "desc": "Protocol",		'checked': true , 'fil': 'proto',		'sort': sortNumber}],
+	[ "srcAddr", 	{ "desc": "Source Address",	'checked': true , 'fil': 'src ip',		'sort': sortIP}],
+	[ "srcPort", 	{ "desc": "Source Port",	'checked': true , 'fil': 'src port',	'sort': sortNumber}],
+	[ "dstAddr", 	{ "desc": "Dest Address",	'checked': true , 'fil': 'dst ip',		'sort': sortIP}],
 	[ "dstPort", 	{ "desc": "Dest Port", 		'checked': true , 'fil': 'dst port',	'sort': sortNumber}],
-	[ "TTL", 		{ "desc": "TTL", 		'checked': false, 'fil': 'ttl',		'sort': sortNumber}],
+	[ "TTL", 		{ "desc": "TTL", 			'checked': false, 'fil': 'ttl',			'sort': sortNumber}],
 	[ "icmpTYpe", 	{ "desc": "ICMP Type", 		'checked': false, 'fil': 'icmp type',	'sort': sortNumber}],
 	[ "icmpCode", 	{ "desc": "ICMP Code", 		'checked': false, 'fil': 'icmp code',	'sort': sortNumber}],
 	[ "packets", 	{ "desc": "Packets", 		'checked': true , 'fil': 'packets eq',	'sort': sortNumber}],
-	[ "bytes", 		{ "desc": "Bytes", 		'checked': true , 'fil': 'bytes eq',	'sort': sortNumber}],
-	[ "pps", 		{ "desc": "PPS", 		'checked': false, 'fil': 'pps eq',	'sort': sortNumber}],
-	[ "bps", 		{ "desc": "BPS", 		'checked': false, 'fil': 'bps eq',	'sort': sortNumber}],
-	[ "flags", 		{ "desc": "TCP Flags", 		'checked': false, 'fil': 'flags',	'sort': undefined}],
-	[ "tos", 		{ "desc": "TOS", 		'checked': false, 'fil': 'tos',		'sort': sortNumber}],
+	[ "bytes", 		{ "desc": "Bytes", 			'checked': true , 'fil': 'bytes eq',	'sort': sortNumber}],
+	[ "pps", 		{ "desc": "PPS", 			'checked': false, 'fil': 'pps eq',		'sort': sortNumber}],
+	[ "bps", 		{ "desc": "BPS", 			'checked': false, 'fil': 'bps eq',		'sort': sortNumber}],
+	[ "flags", 		{ "desc": "TCP Flags", 		'checked': false, 'fil': 'flags',		'sort': undefined}],
+	[ "tos", 		{ "desc": "TOS", 			'checked': false, 'fil': 'tos',			'sort': sortNumber}],
+	[ "routerIP", 	{ "desc": "Agent", 			'checked': false, 'fil': 'router ip',	'sort': sortIP}],
 ]);
 
 class Flows {
