--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 						<label for="graph-stack-type" class="form-label">Stack Type</label>
 						<div class="input-group">
 							<div class="btn-group" id="graph-stack-type" role="group" aria-label="graph-stack-type">
-								<input type="radio" class="btn-check" id="ps1" name="graph-type" autocomplete="off" checked>
+								<input type="radio" class="btn-check" id="ps1" name="graph-type" value="combined" autocomplete="off" checked>
 								<label class="btn btn-outline-primary" for="ps1">Combined</label>
-								<input type="radio" class="btn-check" id="ps2" name="graph-type" autocomplete="off">
+								<input type="radio" class="btn-check" id="ps2" name="graph-type" value="stacked" autocomplete="off">
 								<label class="btn btn-outline-primary" for="ps2">Stacked</label>
 							</div>
 						</div>
@@ -176,7 +176,7 @@
 					<div class="col">
 						<label for="graph-stack-by" class="form-label">Stack By</label>
 						<div class="input-group">
-							<div class="btn-group" role="group">
+							<div class="btn-group" role="group" id="graph-stack-by" aria-label="graph-stack-by">
 								<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 									Fields
 								</button>
@@ -184,7 +184,7 @@
 									<li>
 										<div class="dropdown-item input-group-text">
 										<div class="form-check">
-										<input class="form-check-input" id="gsb-protocol" type="radio" name="graph-stack-by" value="protocol" aria-label="gsb-protocol" checked>
+										<input class="form-check-input" id="gsb-protocol" type="radio" name="graph-by" value="proto" aria-label="gsb-protocol" checked>
 										<label class="form-check-label" for="gsb-protocol">Protocol</label>
 										</div>
 										</div>
@@ -192,7 +192,7 @@
 									<li>
 										<div class="dropdown-item input-group-text">
 										<div class="form-check">
-										<input class="form-check-input" id="gsb-address" type="radio" name="graph-stack-by" value="address" aria-label="gsb-address">
+										<input class="form-check-input" id="gsb-address" type="radio" name="graph-by" value="srcAddr" aria-label="gsb-address">
 										<label class="form-check-label" for="gsb-address">Address</label>
 										</div>
 										</div>
@@ -200,7 +200,7 @@
 									<li>
 										<div class="dropdown-item input-group-text">
 										<div class="form-check">
-										<input class="form-check-input" id="gsb-port" type="radio" name="graph-stack-by" value="port" aria-label="gsb-port">
+										<input class="form-check-input" id="gsb-port" type="radio" name="graph-by" value="srcPort" aria-label="gsb-port">
 										<label class="form-check-label" for="gsb-port">Port</label>
 										</div>
 										</div>
@@ -217,7 +217,7 @@
 				</div>
 				<div class="row p-0 m-2">
 					<div class="col-12">
-						<div class="">Legend: <span id="graphlegend" class="fs-6">&nbsp;</span> </div>
+						<div class="">Legend:<span id="graphlegend" class="fs-6">&nbsp;</span></div>
 					</div>
 				</div>
 			</div>
@@ -595,8 +595,6 @@ function get_checked_fields() {
 	return(ret);
 }
 async function cache_filter_cb(fld,val) {
-// XXX tried to set the flowlistbutton text to a spinner when processing a large filter... didn't seem to work.
-//	set_flowlistbutton('<div class="spinner-border spinner-border-sm" role="status"><span class="visually-hidden">Loading...</span></div>');
 	const fs = document.getElementById('filterstats');
 	if (fs.innerHTML.includes("cached") == false) { fs.innerHTML = fs.innerHTML+" (cached)"; }
 	const filter = document.getElementById('filter');
@@ -692,30 +690,61 @@ function sort_subset(arr, by, dir) {
  * the same timestamp.  This function will add up the fields if the timestamps
  * match.
  */
-function gen_graph_data(type, stacked) {
-	if (typeof type === 'undefined') type="flow";
-	if (typeof stacked === 'undefined') stacked="false";
-/*
- XXX generate data that is stacked or combined
+function gen_graph_data() {
+	if (typeof cacheflows === 'undefined') return([]);
+	var stacktype = get_stack_type();
+	var stackby = get_stack_by();
 
- type == 'flows' or 'protocol'  stack on 'protocol'
- type == 'address'  stack on address (source or dest???)
- type == 'port'		stack on port (soure or dest???)
-
-*/
+	console.log(`gen_graph_data: type=${stacktype} by=${stackby}`);
 	var data = new Array();
+	var fields = ["Date"];
+	if (stacktype != 'stacked')
+		fields.push('All');
 	cacheflows.forEach((f) => {
-		var t = [fixup_date(f.get('received')),Number(f.get('bytes')),Number(f.get('packets'))];
-		if (data.length > 0 && compare_date(data[data.length-1][0],t[0]) == true) {	// times match
-			data[data.length-1][1] += t[1];
-			data[data.length-1][2] += t[2];
-		} else {									// times !match
+//			console.log(`gen_graph_data: ${f.get(stackby)}`);
+		var idx = 1;
+		var t = [];
+		var name = "";
+		if (stacktype == 'stacked') {
+			switch (stackby) {
+				case "proto":
+					name = PROTO_NAMES.has(f.get(stackby)) ? PROTO_NAMES.get(f.get(stackby)) : f.get(stackby);
+					break;
+				default:
+					name = f.get(stackby);
+			}
+			idx = fields.indexOf(name);
+			if (idx == -1) {
+				fields.push(name);
+				idx = fields.indexOf(name);
+			}
+		}
+//			var t = [fixup_date(f.get('received')),Number(f.get('bytes')),Number(f.get('packets'))];
+		t[0] = fixup_date(f.get('received'));
+		t[idx] = Number(f.get('bytes'));
+		if (data.length > 0 && compare_date(data[data.length-1][0],t[0]) == true) {
+			// times match... just add together
+			if (data[data.length-1][idx] == undefined) {
+				data[data.length-1][idx] = t[idx];
+			} else {
+				data[data.length-1][idx] += t[idx];
+			}
+//				data[data.length-1][2] += t[2];
+		} else {
+			// times don't match... push a new value
 			data.push(t);
 		}
 	});
-//	data.sort(comp_flow);
-	console.log("gen_graph_data returned "+data.length);
-	return(data)
+	/*
+	 * the data array is not filled with holes.  go thru the array and fill in any holes with 0
+	 */
+	data.map((x) => {
+		for (var i=1; i<fields.length; i++)
+			if (typeof x[i] === 'undefined')
+				x[i] = 0;
+	});
+	console.log(`gen_graph_data: fields: ${fields} value: ${data.length}`);
+	return({'labels': fields, 'values': data})
 }
 function graph_zoom(mints, maxts, points) {
 	console.log("graph_zoom");
@@ -760,25 +789,38 @@ function graph_visible() {
 	return (e.classList.entries().toArray().flat().includes('show'))
 }
 function graph_legend_formatter(data) {
+//XXX fix formating when lots of values. Pick top N and sum the rest
 	let ret = "";
 	if (data.x == null) {
-		ret = data.series.map(v => `<span style="color: ${v.color};">${v.label}</span>`).join(' ');
+		ret = data.series.map(v => `<span style="color: ${v.color};">${v.label}</span>`).join('<br/> ');
 	} else {
-		ret = data.xHTML + " " + data.series.map(v => `<span style="color: ${v.color};">${v.label}:</span> ${v.yHTML}`).join('&nbsp;&nbsp;');
+		ret = data.xHTML + " " + data.series.map(v => `<span style="color: ${v.color};">${v.label}:</span> ${v.yHTML}`).join('&nbsp;&nbsp;<br/>');
 	}
 	return(ret);
 }
-// return false if data combined
-// return true if data stacked
-function get_stack_select() {
+function get_stack_by() {
+	var gsl = document.getElementById('graph-stack-by');
+	if (typeof gsl === 'undefined') { return(false); }
+	var rbs = gsl.querySelectorAll('input[name="graph-by"]');
+	for (var b = 0; b < rbs.length; b++) {
+//		console.log(`get_stack_by: ${rbs[b].name} ${rbs[b].checked} ${rbs[b].value}`);
+		if (rbs[b].checked == true)
+			return(rbs[b].value);
+	}
+	return("");
+}
+/*
+ * return value of checked button
+ */
+function get_stack_type() {
 	var gsl = document.getElementById('graph-stack-type');
 	if (typeof gsl === 'undefined') { return(false); }
 	var rbs = gsl.querySelectorAll('input[name="graph-type"]');
-	if (rbs.lentgh != 2) { return(false); }
+	if (rbs.length != 2) { return(false); }
 	if (rbs[0].checked == true) {
-		return(false);
+		return(rbs[0].value);
 	}
-	return(true);
+	return(rbs[1].value);
 }
 /*
  * function to build the current graph.
@@ -797,33 +839,46 @@ async function build_graph(gtype) {
 		console.log("build_graph: element hidden. aborting");
 		return;
 	}
-	var stacked = get_stack_select();
-	var data = gen_graph_data(gtype,stacked);
-	if (data.length == 0) {
+	var stype = get_stack_type();
+	var stackedby = get_stack_by();
+	var data = gen_graph_data();
+	if (data.values.length == 0) {
 		console.log("no data to graph");
 		return;
 	} else {
-		console.log(`graphing ${data.length} points`);
+		console.log(`graphing ${data.values.length} points`);
 	}
 	var dyconfig = {};
 	if (typeof dygraph === 'undefined') {
 		dyconfig = {
 // when specified caused problem when zooming in... but just the first time.
 //			dateWindow: [data[0][0], data[data.length-1][0]], // set the date window to the all flows
-			labels: ["Date", "Bytes", "Packets" ],
+			connectSeparatedPoints: true,
+			labels: data.labels,
 			legend: 'always',
 			xlabel: "Time",
 			ylabel: "Bytes/s",
-			y2label: "Packets/s",
+//			y2label: "Packets/s",
 			labelsDiv: 'graphlegend',
 			strokeWidth: 1,
-			stackedGraph: stacked,
+			stackedGraph: (stype == 'stacked' ? true : false),
 			labelsSeparateLines: true,
 			legendFormatter: graph_legend_formatter,
 			clickCallback: graph_click,
 			zoomCallback: graph_zoom,
-//			xRangePad: 20,
-//			yRangePad: 20,
+			highlightCircleSize: 3,
+			labelsKMG2: true,
+/*
+			highlightSeriesOpts: {
+				strokeWidth: 3,
+				strokeBorderWidth: 1,
+				highlightCircleSize: 5,
+				highlightSeriesBackgroundAlpha: 1,
+			},
+*/
+
+
+/*
 			axes: {
 				y: {
 					logscale: false,
@@ -837,6 +892,8 @@ async function build_graph(gtype) {
 					labelsKMB: true,
 				}
 			},
+*/
+/*
 			series: {
 				'Bytes': {
 //					highlightSeriesBackgroundColor: "rgb(128,128,128)",
@@ -848,6 +905,7 @@ async function build_graph(gtype) {
 					highlightCircleSize: 3,
 				},
 			},
+*/
 /*
 				strokeWidth: 2,
 				strokeBorderWidth: 1,
@@ -868,11 +926,13 @@ async function build_graph(gtype) {
 //			rangeSelectorPlotStrokeColor: '#888888',
 //			rangeSelectorPlotFillColor: '#cccccc',
 		};
-		dygraph = new Dygraph(go, data, dyconfig);
+		dygraph = new Dygraph(go, data.values, dyconfig);
 	} else {
 		dyconfig = {
-			file: data,
-			dateWindow: [data[0][0], data[data.length-1][0]], // reset the date window
+			labels: data.labels,
+			stackedGraph: (stype == 'stacked' ? true : false),
+			file: data.values,
+			dateWindow: [data.values[0][0], data.values[data.values.length-1][0]], // reset the date window
 		};
 		dygraph.updateOptions(dyconfig);
 	}
@@ -1179,10 +1239,12 @@ async function send_search() {
 }
 // Hookup clear button
 document.getElementById("clearsearch").addEventListener("click", btnElem => {
-	console.log('clear pressed');
+//	console.log('clear pressed');
 	const filter = document.getElementById('filter');
 	filter.value = "";
-	cacheflows.reset_filter();
+	if (typeof cacheflows !== 'undefined') {
+		cacheflows.reset_filter();
+	}
 	load_flows();
 	build_graph();
 });
@@ -1221,13 +1283,13 @@ document.getElementById('relativetime').addEventListener("keypress", (evt) => {
 });
 // Hookup Stack Type
 document.getElementById('graph-stack-type').addEventListener("click", (evt) => {
-	evt.preventDefault();
+	// do not preventDefault() so that button checked changes
 	build_graph();
 });
 // Hookup Stack By
-document.querySelectorAll('input[name="graph-stack-by"]').forEach((f) => {
+document.querySelectorAll('input[name="graph-by"]').forEach((f) => {
 	f.addEventListener("click", (evt) => {
-		evt.preventDefault();
+		// do not preventDefault() so that button checked changes
 		build_graph();
 	});
 });
