--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
 								<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 									Fields
 								</button>
-								<ul class="dropdown-menu">
+								<ul id="gsb-dropdown" class="dropdown-menu">
+<!--
 									<li>
 										<div class="dropdown-item input-group-text">
 										<div class="form-check">
@@ -205,6 +206,7 @@
 										</div>
 										</div>
 									</li>
+-->
 								</ul>
 							</div>
 						</div>
@@ -217,7 +219,7 @@
 				</div>
 				<div class="row p-0 m-2">
 					<div class="col-12">
-						<div class="">Legend:<span id="graphlegend" class="fs-6">&nbsp;</span></div>
+						<div class="">Legend:&nbsp;&nbsp;<span id="graphlegend" class="fs-6">&nbsp;</span></div>
 					</div>
 				</div>
 			</div>
@@ -272,23 +274,23 @@ const PROTO_NAMES = new Map([
 ]);
 
 const FLOW_FIELDS = new Map([
-	[ "received", 	{ "desc": "Flow Received",	'checked': true , 'fil': undefined,		'sort': sort_received}],
-	[ "duration", 	{ "desc": "Flow Duration",	'checked': false, 'fil': undefined,		'sort': sort_duration}],
-	[ "proto", 		{ "desc": "Protocol",		'checked': true , 'fil': 'proto',		'sort': sort_proto}],
-	[ "srcAddr", 	{ "desc": "Source Address",	'checked': true , 'fil': 'src ip',		'sort': sort_srcAddr}],
-	[ "srcPort", 	{ "desc": "Source Port",	'checked': true , 'fil': 'src port',	'sort': sort_srcPort}],
-	[ "dstAddr", 	{ "desc": "Dest Address",	'checked': true , 'fil': 'dst ip',		'sort': sort_dstAddr}],
-	[ "dstPort", 	{ "desc": "Dest Port", 		'checked': true , 'fil': 'dst port',	'sort': sort_dstPort}],
-	[ "TTL", 		{ "desc": "TTL", 			'checked': false, 'fil': 'ttl',			'sort': sort_ttl}],
-	[ "icmpTYpe", 	{ "desc": "ICMP Type", 		'checked': false, 'fil': 'icmp type',	'sort': sort_icmpTYpe}],
-	[ "icmpCode", 	{ "desc": "ICMP Code", 		'checked': false, 'fil': 'icmp code',	'sort': sort_icmpCode}],
-	[ "packets", 	{ "desc": "Packets", 		'checked': true , 'fil': 'packets eq',	'sort': sort_packets}],
-	[ "bytes", 		{ "desc": "Bytes", 			'checked': true , 'fil': 'bytes eq',	'sort': sort_bytes}],
-	[ "pps", 		{ "desc": "PPS", 			'checked': false, 'fil': 'pps eq',		'sort': sort_pps}],
-	[ "bps", 		{ "desc": "BPS", 			'checked': false, 'fil': 'bps eq',		'sort': sort_bps}],
-	[ "flags", 		{ "desc": "TCP Flags", 		'checked': false, 'fil': 'flags',		'sort': undefined}],
-	[ "tos", 		{ "desc": "TOS", 			'checked': false, 'fil': 'tos',			'sort': sort_tos}],
-	[ "routerIP", 	{ "desc": "Agent", 			'checked': false, 'fil': 'router ip',	'sort': sort_agent}],
+	[ "received", 	{ "desc": "Flow Received",	'checked': true , 'fil': undefined,		'sort': sort_received,	'stackby': false}],
+	[ "duration", 	{ "desc": "Flow Duration",	'checked': false, 'fil': undefined,		'sort': sort_duration,	'stackby': false}],
+	[ "proto", 		{ "desc": "Protocol",		'checked': true , 'fil': 'proto',		'sort': sort_proto, 	'stackby': true}],
+	[ "srcAddr", 	{ "desc": "Source Address",	'checked': true , 'fil': 'src ip',		'sort': sort_srcAddr,	'stackby': true}],
+	[ "srcPort", 	{ "desc": "Source Port",	'checked': true , 'fil': 'src port',	'sort': sort_srcPort,	'stackby': true}],
+	[ "dstAddr", 	{ "desc": "Dest Address",	'checked': true , 'fil': 'dst ip',		'sort': sort_dstAddr,	'stackby': true}],
+	[ "dstPort", 	{ "desc": "Dest Port", 		'checked': true , 'fil': 'dst port',	'sort': sort_dstPort,	'stackby': true}],
+	[ "TTL", 		{ "desc": "TTL", 			'checked': false, 'fil': 'ttl',			'sort': sort_ttl,		'stackby': false}],
+	[ "icmpTYpe", 	{ "desc": "ICMP Type", 		'checked': false, 'fil': 'icmp type',	'sort': sort_icmpTYpe,	'stackby': true}],
+	[ "icmpCode", 	{ "desc": "ICMP Code", 		'checked': false, 'fil': 'icmp code',	'sort': sort_icmpCode,	'stackby': true}],
+	[ "packets", 	{ "desc": "Packets", 		'checked': true , 'fil': 'packets eq',	'sort': sort_packets,	'stackby': false}],
+	[ "bytes", 		{ "desc": "Bytes", 			'checked': true , 'fil': 'bytes eq',	'sort': sort_bytes,		'stackby': false}],
+	[ "pps", 		{ "desc": "PPS", 			'checked': false, 'fil': 'pps eq',		'sort': sort_pps,		'stackby': false}],
+	[ "bps", 		{ "desc": "BPS", 			'checked': false, 'fil': 'bps eq',		'sort': sort_bps,		'stackby': false}],
+	[ "flags", 		{ "desc": "TCP Flags", 		'checked': false, 'fil': 'flags',		'sort': undefined,		'stackby': false}],
+	[ "tos", 		{ "desc": "TOS", 			'checked': false, 'fil': 'tos',			'sort': sort_tos,		'stackby': false}],
+	[ "routerIP", 	{ "desc": "Agent", 			'checked': false, 'fil': 'router ip',	'sort': sort_agent,		'stackby': true}],
 ]);
 
 class Flows {
@@ -512,6 +514,7 @@ var cacheheaders=undefined;
 var searchtime=undefined;
 var dygraph=undefined;
 var flowsperpage=50;
+var legend_top_n=10;
 
 function sort_received(a,b) { return sortNumber(a,b,"received"); }
 function sort_duration(a,b) { return sortNumber(a,b,"duration"); }
@@ -788,13 +791,32 @@ function graph_visible() {
 	if ( typeof e === 'undefined' ) return false;
 	return (e.classList.entries().toArray().flat().includes('show'))
 }
+/* sort the list of legends.  the is in reverse order */
+function legend_sort_y(a,b) {
+	if (a.visible == false) { return(1); }	// if the data is not visible... send it to the end
+	if (a.y > b.y) { return(-1) };
+	if (a.y < b.y) { return(1) };
+	return(0);
+}
 function graph_legend_formatter(data) {
-//XXX fix formating when lots of values. Pick top N and sum the rest
 	let ret = "";
+	var series = data.series.sort(legend_sort_y);
+	top_n = series.slice(0, legend_top_n);
+	if (series.length > legend_top_n+1) {
+		var tot = 0;
+		series.slice(legend_top_n).map((v) => { tot += v.y; });
+		top_n[top_n.length-1] = {
+			'label': "Other",
+			'visible': true,
+			'color': "rgb(255,255,255)",
+			'y': tot,
+			'yHTML': tot,
+		};
+	}
 	if (data.x == null) {
-		ret = data.series.map(v => `<span style="color: ${v.color};">${v.label}</span>`).join('<br/> ');
+		ret = "<br/>" + top_n.map(v => `<div class="row"><div class="col" style="color: ${v.color};">${v.label}</div></div>`).join('');
 	} else {
-		ret = data.xHTML + " " + data.series.map(v => `<span style="color: ${v.color};">${v.label}:</span> ${v.yHTML}`).join('&nbsp;&nbsp;<br/>');
+		ret = data.xHTML + "<br/>" + top_n.map(v => `<div class="row"><div class="col" style="color: ${v.color};">${v.label}:</div><div class="col">${v.yHTML}</div></div>`).join('');
 	}
 	return(ret);
 }
@@ -1136,10 +1158,57 @@ async function parse_flows(csvtext) {
 	load_flows();
 	build_graph();
 }
+/*
+<li>
+	<div class="dropdown-item input-group-text">
+	<div class="form-check">
+	<input class="form-check-input" id="gsb-port" type="radio" name="graph-by" value="srcPort" aria-label="gsb-port">
+	<label class="form-check-label" for="gsb-port">Port</label>
+	</div>
+	</div>
+</li>
+*/
+// Hookup stack-by selector
+async function hookup_stack_by_selector() {
+	const odd = document.getElementById("gsb-dropdown");
+	var firstone = true;
+	FLOW_FIELDS.keys().forEach( (f) => {
+		if (FLOW_FIELDS.get(f).stackby == false) { return; }	// skip fields we don't want to try to stack
+		var li = document.createElement("li");
+		var di = document.createElement("div");
+		di.classList.add('dropdown-item');
+		di.classList.add('input-group-text');
+		var fc = document.createElement("div");
+		fc.classList.add('form-check');
+		var cb = document.createElement("input");
+		cb.classList.add('form-check-input');
+		cb.setAttribute('type', 'radio');
+		cb.setAttribute('name', 'graph-by');
+		cb.setAttribute('id', 'gsb-'+f);
+		cb.setAttribute('value', f);
+		cb.setAttribute('aria-label', FLOW_FIELDS.get(f).desc);
+		cb.checked = firstone;
+		firstone = false;
+		cb.addEventListener('click', (evt) => {
+			// do not preventDefault() so that button checked changes
+			build_graph();
+		});
+		var lb = document.createElement("label");
+		lb.classList.add('form-check-label');
+		lb.setAttribute('for', 'gsb-'+f);
+		lb.innerHTML = FLOW_FIELDS.get(f).desc;
+		// connect the elements
+		fc.appendChild(cb);
+		fc.appendChild(lb);
+		di.appendChild(fc);
+		li.appendChild(di);
+		odd.appendChild(li);
+	});
+}
 // Hookup fields selector
 async function hookup_fields_selector() {
 	const odd = document.getElementById("fieldsdropdown");
-/*(
+/*
 <li>
 	<div class="dropdown-item input-group-text">
 	<div class="form-check">
@@ -1286,6 +1355,7 @@ document.getElementById('graph-stack-type').addEventListener("click", (evt) => {
 	// do not preventDefault() so that button checked changes
 	build_graph();
 });
+/* moved to hookup_stack_by_selector()
 // Hookup Stack By
 document.querySelectorAll('input[name="graph-by"]').forEach((f) => {
 	f.addEventListener("click", (evt) => {
@@ -1293,11 +1363,13 @@ document.querySelectorAll('input[name="graph-by"]').forEach((f) => {
 		build_graph();
 	});
 });
+*/
 
 // initialize the doc
 window.addEventListener("load", () => {
 	set_time_type();
 	hookup_fields_selector();
+	hookup_stack_by_selector();
 	load_headers();
 });
 
