--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-1">
+						<label for="graph-top-n" class="form-label">Top N</label>
+						<div class="input-group">
+						<input type="text" class="form-control" id="graph-top-n" value="10" aria-label="graph-top-n">
+						</div>
+					</div>
 				</div>
 				<div class="row p-0 m-2">
 					<div class="col p-0 m-0">
@@ -432,7 +438,6 @@ var cacheheaders=undefined;
 var searchtime=undefined;
 var dygraph=undefined;
 var flowsperpage=50;
-var legend_top_n=10;
 
 function sort_received(a,b) { return sortNumber(a,b,"received"); }
 function sort_duration(a,b) { return sortNumber(a,b,"duration"); }
@@ -716,13 +721,18 @@ function legend_sort_y(a,b) {
 	if (a.y < b.y) { return(1) };
 	return(0);
 }
+function get_graph_top_n() {
+	var gtnv = document.getElementById('graph-top-n').value || 10;
+	return(gtnv);	
+}
 function graph_legend_formatter(data) {
 	let ret = "";
 	var series = data.series.sort(legend_sort_y);
-	top_n = series.slice(0, legend_top_n);
-	if (series.length > legend_top_n+1) {
+	var gtn = get_graph_top_n();
+	var top_n = series.slice(0, gtn);
+	if (series.length > gtn+1) {
 		var tot = 0;
-		series.slice(legend_top_n).map((v) => { tot += v.y; });
+		series.slice(gtn).map((v) => { tot += v.y; });
 		top_n[top_n.length-1] = {
 			'label': "Other",
 			'visible': true,
@@ -1225,6 +1235,9 @@ async function send_search() {
 	query.open("POST", "nfquery.cgi", true);
 	query.send(data.join("&"));
 }
+async function update_graph_top_n() {
+	build_graph();
+}
 // Hookup clear button
 document.getElementById("clearsearch").addEventListener("click", btnElem => {
 //	console.log('clear pressed');
@@ -1286,6 +1299,13 @@ document.querySelectorAll('input[name="graph-by"]').forEach((f) => {
 // Hookup graph show signal
 document.getElementById('graphcontainer').addEventListener('shown.bs.collapse', (evt) => {
 	build_graph();
+});
+// Hookup graph-top-n
+document.getElementById('graph-top-n').addEventListener('keypress', (evt) => {
+	if (evt.key === "Enter") {
+		evt.preventDefault();
+		update_graph_top_n();
+	}
 });
 
 // initialize the doc
