--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@ var searchtime=undefined;
 var dygraph=undefined;
 var flowsperpage=50;
 
-function sort_received(a,b) { return sortNumber(a,b,"received"); }
-function sort_duration(a,b) { return sortNumber(a,b,"duration"); }
+function sort_received(a,b) { return sortDate(a,b,"received"); }
+function sort_duration(a,b) { return sortFloat(a,b,"duration"); }
 function sort_proto(a,b) { return sortNumber(a,b,"proto"); }
 function sort_srcAddr(a,b) { return sortIP(a,b,"srcAddr"); }
 function sort_srcPort(a,b) { return sortNumber(a,b,"srcPort"); }
@@ -478,6 +478,20 @@ function sort_bps(a,b) { return sortNumber(a,b,"bps"); }
 function sort_tos(a,b) { return sortNumber(a,b,"tos"); }
 function sort_agent(a,b) { return sortIP(a,b,"routerIP"); }
 // sort functions
+function sortDate(a,b, field) {
+	var ia = BigInt(a.get(field).valueOf());
+	var ib = BigInt(b.get(field).valueOf());
+	if (ia < ib) { return -1; }
+	if (ia > ib) { return 1; }
+	return(0);
+}
+function sortFloat(a,b,field) {
+	var ia = parseFloat(a.get(field));
+	var ib = parseFloat(b.get(field));
+	if (ia < ib) { return -1; }
+	if (ia > ib) { return 1; }
+	return(0);
+}
 function sortIP(a,b, field) {
 	var ipa = a.get(field);
 	var ipb = b.get(field);
